--- a/index.html
+++ b/index.html
@@ -8,19 +8,30 @@
     <title>Relógio | DC</title>
 </head>
 <body>
-    <div class="relogio">
-        <div>
-            <span id="horas">00</span>
-            <span class="tempo">Horas</span>
+    <header>
+        <a href="https://github.com/DiegoCorredeira" target="
+        _blank">
+            <h1><img id="imagem" src="https://avatars.githubusercontent.com/u/91692393?v=4" alt=""><h1>        
+        </a>
+    </header>
+    <div class="main">
+        <div class="relogio">
+            <div>
+                <span id="horas">00</span>
+                <span class="tempo">Horas</span>
+            </div>
+            <div>
+                <span id="minutos">00</span>
+                <span class="tempo">Minutos</span>
+            </div>
+            <div>
+                <span id="segundos">00</span>
+                <span class="tempo">Segundos</span>
+            </div>
         </div>
-        <div>
-            <span id="minutos">00</span>
-            <span class="tempo">Minutos</span>
-        </div>
-        <div>
-            <span id="segundos">00</span>
-            <span class="tempo">Segundos</span>
-        </div>
+    </div>
+    <div class="footer">
+        <p>Diego | Fins Educacionais</p>
     </div>
 </body>
 <script src="assets/js/main.js"></script>
